Prepared for security basic training

--- a/src/main/resources/com/company/jmixpmflowbase/messages_en.properties
+++ b/src/main/resources/com/company/jmixpmflowbase/messages_en.properties
@@ -1,6 +1,14 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+com.company.jmixpmflowbase.entity/Document=Document
+com.company.jmixpmflowbase.entity/Document.createdBy=Created by
+com.company.jmixpmflowbase.entity/Document.createdDate=Created date
+com.company.jmixpmflowbase.entity/Document.file=File
+com.company.jmixpmflowbase.entity/Document.id=Id
+com.company.jmixpmflowbase.entity/Document.notes=Notes
+com.company.jmixpmflowbase.entity/Document.project=Project
 com.company.jmixpmflowbase.entity/Project=Project
+com.company.jmixpmflowbase.entity/Project.documents=Documents
 com.company.jmixpmflowbase.entity/Project.endDate=End date
 com.company.jmixpmflowbase.entity/Project.id=Id
 com.company.jmixpmflowbase.entity/Project.manager=Manager
@@ -41,6 +49,9 @@ com.company.jmixpmflowbase.view.main/MainView.title=Jmixpm Flow Base
 com.company.jmixpmflowbase.view.main/applicationTitle.text=Jmixpm Flow Base
 com.company.jmixpmflowbase.view.main/navigation.ariaLabel=Views
 com.company.jmixpmflowbase.view.main/drawerToggle.ariaLabel=Menu toggle
+
+com.company.jmixpmflowbase.view.document/documentDetailView.title=Document
+com.company.jmixpmflowbase.view.document/documentListView.title=Documents
 
 com.company.jmixpmflowbase.view.login/LoginView.title=Login - Jmixpm Flow Base
 com.company.jmixpmflowbase.view.login/loginForm.headerTitle=Jmixpm Flow Base
